Bug 1711816 - Fix stdc++compat.cpp compilation errors with recent GCC. r=firefox-build-system-reviewers,nalexander

Differential Revision: https://phabricator.services.mozilla.com/D115436